<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/alivc_voicecall_rl_login_layout_content"
    android:background="@color/alivc_biginteractiveclass_color_text_white"
    android:orientation="vertical"
    android:gravity="center"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/alivc_biginteractiveclass_tv_title"
            android:layout_marginTop="@dimen/alivc_biginteractiveclass_padding_20"
            android:layout_centerHorizontal="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/alivc_big_interactive_class_string_title"
            android:textColor="@color/alivc_biginteractiveclass_color_text_gray"
            android:textSize="@dimen/alivc_biginteractiveclass_size_text__20"
            />

        <TextView
            android:id="@+id/alivc_biginteractiveclass_tv_sub_title"
            android:layout_marginTop="@dimen/alivc_biginteractiveclass_margin_10"
            android:layout_below="@id/alivc_biginteractiveclass_tv_title"
            android:layout_centerHorizontal="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/alivc_big_interactive_class_string_text_sub_title"
            android:textColor="@color/alivc_biginteractiveclass_color_text_gray"
            android:textSize="@dimen/alivc_biginteractiveclass_size_text_10"
            />

        <android.support.design.widget.TextInputLayout
            android:layout_marginTop="@dimen/alivc_biginteractiveclass_width_imageview_72"
            android:layout_below="@id/alivc_biginteractiveclass_tv_sub_title"
            android:layout_centerHorizontal="true"
            app:hintTextAppearance="@style/hintTextAppearance"
            android:id="@+id/alivc_biginteractiveclass_textinputlayout_student_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/alivc_biginteractiveclassl_edittext_student_name"
                android:maxLines="1"
                android:theme="@style/hintTextAppearance"
                android:textColor="@color/alivc_biginteractiveclass_color_text_gray"
                android:textSize="@dimen/alivc_biginteractiveclass_size_text_14"
                android:hint="@string/alivc_biginteractiveclass_string_hint_student_name"
                android:layout_width="@dimen/alivc_biginteractiveclass_width_et_306"
                android:layout_height="@dimen/alivc_biginteractiveclass_width_selector_40" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_marginTop="@dimen/alivc_biginteractiveclass_margin_10"
            android:layout_below="@id/alivc_biginteractiveclass_textinputlayout_student_name"
            android:layout_centerHorizontal="true"
            app:hintTextAppearance="@style/hintTextAppearance"
            android:id="@+id/alivc_biginteractiveclass_textinputlayout_channelid"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <com.aliyun.rtc.interactiveclassplayer.view.ChannelEditVIew
                android:id="@+id/alivc_biginteractiveclass_edittext_channelid"
                android:maxLines="1"
                android:maxLength="6"
                android:inputType="number"
                android:textColor="@color/alivc_biginteractiveclass_color_text_gray"
                android:textSize="@dimen/alivc_biginteractiveclass_size_text_14"
                android:hint="@string/alivc_biginteractiveclass_string_hint_room_num"
                android:theme="@style/hintTextAppearance"
                android:layout_width="@dimen/alivc_biginteractiveclass_width_et_306"
                android:layout_height="@dimen/alivc_biginteractiveclass_width_selector_40" />
        </android.support.design.widget.TextInputLayout>


        <TextView
            android:gravity="center"
            android:enabled="true"
            android:textColor="@color/alivc_biginteractiveclass_color_text_white"
            android:id="@+id/alivc_voicecall_tv_begin_speak"
            android:layout_marginTop="@dimen/alivc_biginteractiveclass_margin_75"
            android:background="@drawable/alivc_biginteractiveclass_btn_bg_selector"
            android:layout_centerHorizontal="true"
            android:text="@string/alivc_biginteractiveclass_string_btn_start_voice_call"
            android:textSize="@dimen/alivc_biginteractiveclass_size_text_18"
            android:layout_below="@id/alivc_biginteractiveclass_textinputlayout_channelid"
            android:layout_width="@dimen/alivc_biginteractiveclass_width_et_306"
            android:layout_height="@dimen/alivc_biginteractiveclass_height_tv_48"/>
    </RelativeLayout>
</LinearLayout>
